syntax = "proto3";
package event_store.client.client_capabilities;
option java_package = "com.eventstore.dbclient.proto.clientcapabilities";
import "shared.proto";

service ClientCapabilities {
	rpc GetSupportedMethods (event_store.client.Empty) returns (SupportedMethods);
}

message SupportedMethods {
	repeated SupportedMethod Methods = 1;
	string EventStoreServerVersion = 2;
}

message SupportedMethod {
	string MethodName = 1;
	string ServiceName = 2;
}

